Animal/Plant Cells

--- a/HTML/cell-labeler.html
+++ b/HTML/cell-labeler.html
@@ -21,39 +21,36 @@
             <li class="nav-item-left nav-title"><a href="home.html">Interactive Bio</a></li>
             <li class="nav-item-left nav-text"><a href="activities.html">Activities</a></li>
             <li class="nav-item-right nav-text"><a href="about.html">About</a></li>
-        </ul><br><br><br><br>
+        </ul><br><br>
         <div class="activity-title">Cell Labeler</div><br><br>
-        <div class="image-container">
-            <div class="radio-button" style="left: calc(15vw + 3.3%); top: 68.5%;"></div>
-            <div class="radio-button" style="left: calc(15vw + 7.3%); top: 56.5%;"></div>
-            <div class="radio-button" style="left: calc(15vw + 9.3%); top: 85.8%;"></div>
-            <div class="radio-button" style="left: calc(15vw + 8.3%); top: 46%;"></div>
-            <div class="radio-button" style="left: calc(15vw + 11.3%); top: 38%;"></div> 
-            <div class="radio-button" style="left: calc(15vw + 15.5%); top: 26%;"></div>
-            <div class="radio-button" style="left: calc(15vw + 16.3%); top: 96%;"></div>
-            <div class="radio-button" style="left: calc(15vw + 18%); top: 15.8%;"></div>
-            <div class="radio-button" style="left: calc(15vw + 24.3%); top: 5.7%;"></div>
-            <div class="radio-button" style="left: calc(15vw + 31%); top: 96%;"></div>
-            <div class="radio-button" style="left: calc(15vw + 42%); top: 86.5%;"></div>
-            <div class="radio-button" style="left: calc(15vw + 43.3%); top: 1%;"></div>
-            <div class="radio-button" style="left: calc(15vw + 48%); top: 81.5%;"></div>
-            <div class="radio-button" style="left: calc(15vw + 53%); top: 72%;"></div>
+        <div class="center">
+            <div class="activity-type-selector">
+                <div class="activity-type-selector-item activity-type-selector-item-active">Animal Cell</div>
+                <div class="activity-type-selector-item">Plant Cell</div>
+            </div>
+        </div>
+        <!-- <div class="image-container">
+            <div class="radio-button Nvsnp-Hwwhyhabz" style="left: calc(15vw + 3.3%); top: 68.5%;"></div>
+            <div class="radio-button Joyvthapu" style="left: calc(15vw + 7.3%); top: 56.5%;"></div>
+            <div class="radio-button Zhezb-Oxllex" style="left: calc(15vw + 9.3%); top: 85.8%;"></div>
+            <div class="radio-button Gnvexhenl" style="left: calc(15vw + 8.3%); top: 46%;"></div>
+            <div class="radio-button Gnvexnl" style="left: calc(15vw + 11.3%); top: 38%;"></div> 
+            <div class="radio-button Khnza-Xgwhietlfbv-Kxmbvnenf" style="left: calc(15vw + 15.5%); top: 26%;"></div>
+            <div class="radio-button Vrmhietlf" style="left: calc(15vw + 16.3%); top: 96%;"></div>
+            <div class="radio-button Kbuhlhfxl" style="left: calc(15vw + 18%); top: 15.8%;"></div>
+            <div class="radio-button Bgmxkfxwbtmx-Ybetfxgm" style="left: calc(15vw + 24.3%); top: 5.7%;"></div>
+            <div class="radio-button Otvnhex" style="left: calc(15vw + 31%); top: 96%;"></div>
+            <div class="radio-button Ixkhqblhfx" style="left: calc(15vw + 42%); top: 86.5%;"></div>
+            <div class="radio-button Fbmhvahgwkbt" style="left: calc(15vw + 43.3%); top: 1%;"></div>
+            <div class="radio-button Lxvkxmhkr-Oxlbvex" style="left: calc(15vw + 48%); top: 81.5%;"></div>
+            <div class="radio-button Lfhhma-Xgwhietlfbv-Kxmbvnenf" style="left: calc(15vw + 53%); top: 72%;"></div>
             <div class="radio-button" style="left: calc(15vw + 53.3%); top: 8%;"></div>
             <div class="radio-button" style="left: calc(15vw + 56.8%); top: 61.7%;"></div>
             <div class="radio-button" style="left: calc(15vw + 58.5%); top: 24.5%;"></div>
             <div class="radio-button" style="left: calc(15vw + 59.3%); top: 46%;"></div>
             <div class="radio-button" style="left: calc(15vw + 59.3%); top: 36%;"></div>
-            <a 
-                title="OpenStax, CC BY 4.0 &lt;https://creativecommons.org/licenses/by/4.0&gt;, via Wikimedia Commons" 
-                href="https://commons.wikimedia.org/wiki/File:0312_Animal_Cell_and_Components.jpg"
-                class="cell-image">
-                <img 
-                    width="512" 
-                    alt="0312 Animal Cell and Components" 
-                    src="../Images/cell.png"
-                    class="cell-image">
-                </a>
-        </div><br><br><br><br>
+            <iframe src="https://learnful.ca/h5p/22/embed" width="766" height="550" frameborder="0" allowfullscreen="allowfullscreen" enable-annotation></iframe><script src="https://learnful.ca/modules/contrib/h5p/vendor/h5p/h5p-core/js/h5p-resizer.js" charset="UTF-8"></script>
+        </div><br><br><br><br> -->
         <div class="footer">
             <div class="footer-div">
                 <div class="footer-item footer-interactive-bio"><a href="home.html">Interactive Bio</a></div>
