Animal Cell Radio Buttons

--- a/HTML/cell-labeler.html
+++ b/HTML/cell-labeler.html
@@ -21,13 +21,36 @@
             <li class="nav-item-left nav-title"><a href="home.html">Interactive Bio</a></li>
             <li class="nav-item-left nav-text"><a href="activities.html">Activities</a></li>
             <li class="nav-item-right nav-text"><a href="about.html">About</a></li>
-        </ul><br><br>
+        </ul><br><br><br>
         <div class="activity-title">Cell Labeler</div><br><br>
         <div class="center">
             <div class="activity-type-selector">
                 <div class="activity-type-selector-item activity-type-selector-item-active">Animal Cell</div>
                 <div class="activity-type-selector-item">Plant Cell</div>
             </div>
+        </div><br>
+        <div class="animal-cell center">
+            <div class="image-container">
+                <div class="radio-button" style="left: calc(15vw + 9.3%); top: 13%;"></div>
+                <div class="radio-button" style="left: calc(15vw + 5.3%); top: 26.7%;"></div>
+                <div class="radio-button" style="left: calc(15vw + 2.3%); top: 34.8%;"></div>
+                <div class="radio-button" style="left: calc(15vw + 2.3%); top: 49.2%;"></div>
+                <div class="radio-button" style="left: calc(15vw + 2.3%); top: 58.4%;"></div>
+                <div class="radio-button" style="left: calc(15vw + 2.3%); top: 72%;"></div>
+                <div class="radio-button" style="left: calc(15vw + 2.6%); top: 79.7%;"></div>
+                <div class="radio-button" style="left: calc(15vw + 13.3%); top: 95.2%;"></div>
+                <div class="radio-button" style="left: calc(15vw + 51.8%); top: 10.1%;"></div>
+                <div class="radio-button" style="left: calc(15vw + 64.3%); top: 20%;"></div>
+                <div class="radio-button" style="left: calc(15vw + 64.3%); top: 27.6%;"></div>
+                <div class="radio-button" style="left: calc(15vw + 62.3%); top: 37.2%;"></div>
+                <div class="radio-button" style="left: calc(15vw + 64.3%); top: 46%;"></div>
+                <div class="radio-button" style="left: calc(15vw + 65.3%); top: 56.9%;"></div>
+                <div class="radio-button" style="left: calc(15vw + 65%); top: 67.2%;"></div>
+                <div class="radio-button" style="left: calc(15vw + 65.3%); top: 76%;"></div>
+                <div class="radio-button" style="left: calc(15vw + 64.3%); top: 85%;"></div>
+                <img class="cell-image" src="../Images/animal-cell.png">
+            </div><br>
+            <p style="color: white">"<a href="https://learnful.ca/project/cell-diagrams-labelling-activity">Label the animal cell</a>" by Zakia Dahi, used under <a href="https://creativecommons.org/licenses/by-nc/4.0/">CC BY-NC 4.0</a> / Cropped from original</p><br>
         </div>
         <!-- <div class="image-container">
             <div class="radio-button Nvsnp-Hwwhyhabz" style="left: calc(15vw + 3.3%); top: 68.5%;"></div>
