Fill Button Answers

--- a/HTML/cell-labeler.html
+++ b/HTML/cell-labeler.html
@@ -27,8 +27,9 @@
             <div class="activity-type-selector">
                 <div class="activity-type-selector-item activity-type-selector-item-active">Animal Cell</div>
                 <div class="activity-type-selector-item">Plant Cell</div>
-            </div>
-        </div><br>
+            </div><br><br>
+            <p class="matching-select-text">Select the </p><br>
+        </div>
         <div class="animal-cell center">
             <div class="image-container">
                 <div class="radio-button" style="left: calc(15vw + 9.3%); top: 13%;"></div>
@@ -50,8 +51,17 @@
                 <div class="radio-button" style="left: calc(15vw + 64.3%); top: 85%;"></div>
                 <img class="cell-image" src="../Images/animal-cell.png">
             </div><br>
-            <p style="color: white">"<a href="https://learnful.ca/project/cell-diagrams-labelling-activity">Label the animal cell</a>" by Zakia Dahi, used under <a href="https://creativecommons.org/licenses/by-nc/4.0/">CC BY-NC 4.0</a> / Cropped from original</p><br>
-        </div>
+            <p style="color: white; padding-left: 10px; padding-right: 10px;">"<a href="https://learnful.ca/project/cell-diagrams-labelling-activity">Label the animal cell</a>" by Zakia Dahi, used under <a href="https://creativecommons.org/licenses/by-nc/4.0/">CC BY-NC 4.0</a> / Cropped from original</p><br>
+            <div class="activity-type-selector">
+                <div class="activity-type-selector-item">Show Word Bank</div>
+            </div>
+        </div><br>
+        <div class="center">
+            <div class="activity-type-selector">
+                <div class="activity-type-selector-item activity-type-selector-item-active">Matching</div>
+                <div class="activity-type-selector-item">Written</div>
+            </div>
+        </div><br>
         <!-- <div class="image-container">
             <div class="radio-button Nvsnp-Hwwhyhabz" style="left: calc(15vw + 3.3%); top: 68.5%;"></div>
             <div class="radio-button Joyvthapu" style="left: calc(15vw + 7.3%); top: 56.5%;"></div>
@@ -96,5 +106,6 @@
         </div>
        
         <script src="../src/JS/globals.js"></script>
+        <script src="../src/JS/cell-labeler.js"></script>
     </body>
 </html>
